# AdventOfCode

./: AdventOfCode.cabal  README.md  flake.nix
src/: Main.hs
src/AOC/: FileInput.hs
src/AOC/Day1/: Day1.hs  Solution.hs
src/AOC/Day2/: Solution.hs
src/AOC/Day3/: Solution.hs
src/AOC/Day4/: Solution.hs
src/AOC/Day5/: Solution.hs
src/AOC/Day6/: Solution.hs
