cabal-version:       3.0

name:                AdventOfCode
version:             0.1.0.0
synopsis:            Advent of code exercises
homepage:            https://github.com/skykanin/AdventOfCode
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              skykanin
maintainer:          3789764+skykanin@users.noreply.github.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable aoc
  import:              shared-properties
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , aoc-lib
  hs-source-dirs:      src
  ghc-options:         -threaded -Wall

library aoc-lib
  import:              shared-properties
  exposed-modules:     Day1.Day1
                     , FileInput
  build-depends:       base == 4.*
                     , containers
  hs-source-dirs:      src/AOC
  ghc-options:         -Wall
